# fastapi_lesson

./: README.md  config.py  create_permissions.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06d31fe77d6f_post.py  4e1ec9a49285_create_access_permission_table.py  9296764f45b6_user.py
common/: dependencies.py
core/models/: __init__.py  access_permisson.py  base.py  db_helper.py  post.py  user.py
cruds/: prermissions.py
utils/: email_sender.py
views/: __init__.py
views/calc/: views.py
views/permissions/: crud.py  views.py
views/users/: crud.py  dependencies.py  schemas.py  views.py
