[tool.poetry]
name = "merion-academy"
version = "0.1.0"
description = ""
authors = ["Vladislav Yaremenko <vlad.yaremenko.98@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
