[tool.poetry]
name = "merion-academy"
version = "0.1.0"
description = ""
authors = ["Vladislav Yaremenko <vlad.yaremenko.98@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version = "^2.7.3"}
pydantic-settings = "^2.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosql = "^10.2"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
